[package]
name = "tbf"
version = "0.1.0"
authors = ["Jamie Nicol <jamie@jamienicol.me>"]

[dependencies]
cgmath = "0.16"
fps_counter = "1.0"
gfx = "0.17"
gfx_window_glutin = "0.22"
glutin = "0.14"
image = "0.18"
specs = "0.10"
specs-derive = "0.1"
tiled = "0.7"

[dependencies.conrod]
version = "0.59"
features = ["gfx_rs", "winit"]
