[package]
name = "tbf"
version = "0.1.0"
authors = ["Jamie Nicol <jamie@jamienicol.me>"]

[profile.dev]
opt-level = 1

[dependencies]
gfx = "0.17"
image = "0.18"
nalgebra = "0.14"
specs = "0.10"
specs-derive = "0.1"
tiled = "0.7"

[dependencies.ggez]
version = "0.4"
features = ["cargo-resource-root"]

[dependencies.sdl2]
version = "0.31"
features = ["bundled"]
